# metakam

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
metakam/: manage.py  utils.py
metakam/api/: admin.py  models.py  serializers.py  urls.py  views.py
metakam/api/migrations/: 0001_initial.py
metakam/metakam/: asgi.py  settings.py  wsgi.py
